# textual_cards

./: .gitignore  .python-version  README.md  pyproject.toml
tests/: test_question_loader.py
tests/test_data/: questions.md
textual_cards/: __main__.py  question_loader.py  question_model.py  quiz.py
